# sigstore-apis

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
openapi/: .gitignore  Makefile  README.md  fulcio.openapi.json  rekor.openapi.json  update.sh  versions
src/: lib.rs
