[package]
name = "sigstore-apis"
version = "0.1.0"
edition = "2021"
description = "Rust clients for the Fulcio and Rekor APIs"
license = "Apache 2.0"
homepage = "https://github.com/trailofbits/sigstore-apis"
repository = "https://github.com/trailofbits/sigstore-apis"

[dependencies]
futures = "0.3"
progenitor-client = "0.5"
regress = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prettyplease = "0.1.25"
progenitor = "0.5"
syn = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
