[package]
name = "sigstore-apis"
version = "0.1.2"
edition = "2024"
description = "Rust clients for the Fulcio and Rekor APIs"
license = "Apache-2.0"
homepage = "https://github.com/trailofbits/sigstore-apis"
repository = "https://github.com/trailofbits/sigstore-apis"

[dependencies]
futures = "0.3"
progenitor-client = "0.11"
regress = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prettyplease = "0.2.37"
progenitor = "0.11"
syn = "2.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true
